--- a/views/registration/agencies.ejs
+++ b/views/registration/agencies.ejs
@@ -18,7 +18,7 @@
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-4">
           <div class="card-body">
-            <h5 class="card-title text-center">Register as a Freak</h5>
+            <h5 class="card-title text-center">Register as a Agency</h5>
             <form class="form-signin" method="post">
               <div class="form-label-group my-4">
                 <input type="text" id="inputName" class="form-control" placeholder="Name" required>
@@ -30,6 +30,12 @@
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
                 <label for="inputEmail">Email address</label>
                 <span name="emailspan"></span>
+              </div>
+
+               <div class="form-label-group my-4">
+                <input type="email" id="inputAgencyname" class="form-control" placeholder="Email address" required>
+                <label for="inputAgencyname">Agency name</label>
+                <span name="agencynamespan"></span>
               </div>
 
               <div class="form-label-group my-4">
