--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -36,7 +36,7 @@
 	              <button class="btn btn-lg btn-block my-4" type="submit">Login</button>
 
 	              <div class="form-label-group text-center my-4">
-	                 <p>Don't have an account? <a href="https://www.w3schools.com">Create Account</a></p>
+	                 <p>Don't have an account? <a href="/registration">Create Account</a></p>
 	              </div>
 	            </form>
 	          </div>
