--- a/views/registration/index.ejs
+++ b/views/registration/index.ejs
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/abc/css/registration.css">
 </head>
 <body>
+	<form method="post">
 	<div class="label col-12 text-center">
 	    <a href=""><img class="label-image my-3" src="/abc/images/logo.png" height="160" width="160"></a>
 	 </div>
