--- a/views/registration/freaks.ejs
+++ b/views/registration/freaks.ejs
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="/abc/css/registration.css">
 </head>
 <body>
+  <form method="post">
   <div class="container-fluid">
     <div class="row">
 
