--- a/views/login/index.ejs
+++ b/views/login/index.ejs
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="/abc/css/login.css">
 </head>
 	<body>
-
 	  <div class="container-fluid">
 	    <div class="row">
 
@@ -23,14 +22,13 @@
 	            <h5 class="card-title text-center text-black">Login</h5>
 	            <form class="form-signin" method="post">
 	              <div class="form-label-group my-4">
-	              	<form method="post">
-	                <input type="email" id="inputEmail" class="form-control" name="inputEmail" placeholder="Enter your email address" required>
+	                <input type="email" id="inputEmail" name="inputEmail" class="form-control" name="email" placeholder="Enter your email address" required>
 	                <label for="inputEmail">Email address</label>
 	                <span name="emailspan"></span>
 	              </div>
 
 	              <div class="form-label-group my-4">
-	                <input type="password" name="inputPassword" class="form-control" name="inputPassword" placeholder="Enter your password" required>
+	                <input type="password" id="inputPassword" name="inputPassword" class="form-control" name="password" placeholder="Enter your password" required>
 	                <label for="inputPassword">Password</label>
 	                <span name="passwordspan"></span>
 	              </div>
