--- a/views/registration/agencies.ejs
+++ b/views/registration/agencies.ejs
@@ -13,7 +13,7 @@
     <div class="row">
 
     	<div class="label col-12 text-center">
-	      		 <a href=""><img class="label-image my-3" src="/abc/images/logo.png" height="160" width="160"></a>
+	      		 <a href="/home"><img class="label-image my-3" src="/abc/images/logo.png" height="160" width="160"></a>
 	    	</div>
 
       <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
@@ -22,33 +22,32 @@
             <h5 class="card-title text-center">Register as a Agency</h5>
             <form class="form-signin" method="post">
               <div class="form-label-group my-4">
-                <form method="post">
-                <input type="text" id="inputName" class="form-control" placeholder="Name" required>
+                <input type="text" id="inputName" name="inputName" class="form-control" placeholder="Name" required>
                 <label for="inputName">Name</label>
                 <span name="namespan"></span>
               </div>
 
               <div class="form-label-group my-4">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
+                <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required>
                 <label for="inputEmail">Email address</label>
                 <span name="emailspan"></span>
               </div>
 
                <div class="form-label-group my-4">
-                <input type="email" id="inputAgencyname" class="form-control" placeholder="Email address" required>
+                <input type="text" id="inputAgencyname" name="inputAgencyname" class="form-control" placeholder="Email address" required>
                 <label for="inputAgencyname">Agency name</label>
                 <span name="agencynamespan"></span>
               </div>
 
               <div class="form-label-group my-4">
-                <input type="text" id="inputPhone" class="form-control" placeholder="Phone No" required>
+                <input type="text" id="inputPhone" name="inputPhone" class="form-control" placeholder="Phone No" required>
                 <label for="inputPhone">Phone No</label>
                 <span name="phonespan"></span>
               </div>
 
               <div class="form-label-group my-4">
               	<div class="form-group">
-			      <select class="form-control" id="inputDropdown" name="dropdown">
+			      <select class="form-control" id="inputGender" name="inputGender">
 			      	<option>Select your Gender</option>
 			        <option value="male">Male</option>
 			        <option value="female">Female</option>
@@ -58,16 +57,30 @@
               </div>
 
               <div class="form-label-group my-4">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required>
                 <label for="inputPassword">Password</label>
                 <span name="passwordspan"></span>
               </div>
               
               <div class="form-label-group my-4">
-                <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Password" required>
+                <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required>
                 <label for="inputConfirmPassword">Confirm password</label>
                 <span name="confirmpasswordspan"></span>
               </div>
+                
+                
+                
+               
+            
+            <div class="text-center">
+                    <% if(typeof errors != "undefined"){ %>   
+                <button type="button" class="error-button"><strong>
+                    <% errors.forEach(function(err){ %>
+                        <%= err.msg %><br>
+                    <% }); %>
+                </strong></button><% } %>
+                
+                
 
               <button class="btn btn-lg btn-block my-4" type="submit">Register</button>
 
