--- a/views/registration/index.ejs
+++ b/views/registration/index.ejs
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="label col-12 text-center">
-		    <a href=""><img class="label-image my-3" src="/abc/images/logo.png" height="160" width="160"></a>
+		    <a href="/home"><img class="label-image my-3" src="/abc/images/logo.png" height="160" width="160"></a>
 		 </div>
 
 		<div class="container-fluid">
@@ -31,4 +31,4 @@
 			</div>
 		</div>
 	</body>
-</html>>
+</html>
