--- a/views/admin/404.ejs
+++ b/views/admin/404.ejs
@@ -15,7 +15,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <link href="/abc/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
 <!-- Custom Theme files -->
-<link href="/abc/css/style.css" rel="stylesheet" type="text/css" media="all"/>
+<link href="/abc/css/admin.css" rel="stylesheet" type="text/css" media="all"/>
 <!--js-->
 <script src="/abc/js/jquery-2.1.1.min.js"></script> 
 <!--icons-css-->
