--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -1,9 +1,8 @@
 <div class="header-main">
     <div class="header-left">
             <div class="logo-name">
-                     <a href="index.html"> <h1>Shoppy</h1> 
-                    <!--<img id="logo" src="" alt="Logo"/>--> 
-                  </a> 								
+                     <!-- <a href="index.html"> <h1>Shoppy</h1>  -->
+                        <a href="/home"><img class="label-image my-3" src="/abc/images/logo.png" height="70" width="70"></a>                  </a> 								
             </div>
             <!--search-box-->
                 <div class="search-box">
