--- a/views/registration/freaks.ejs
+++ b/views/registration/freaks.ejs
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="/abc/css/registration.css">
 </head>
 <body>
-
+   
   <div class="container-fluid">
     <div class="row">
 
@@ -19,29 +19,29 @@
         <div class="card card-signin my-4">
           <div class="card-body">
             <h5 class="card-title text-center">Register as a Freak</h5>
-            <form class="form-signin" method="post">
+            <form class="form-signin" method="post" >
               <div class="form-label-group my-4">
                
-                <input type="text" id="inputName" name="inputName" class="form-control" placeholder="Name"   required>
+                <input type="text" id="inputName" name="inputName" value="<%=user.name %>" class="form-control" placeholder="Name"   required>
                 <label for="inputName">Name</label>
                 <span name="namespan"></span>
               </div>
 
               <div class="form-label-group my-4">
-                <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Email address" required>
+                <input type="email" id="inputEmail" name="inputEmail" value="<%=user.email %>"  class="form-control" placeholder="Email address" required>
                 <label for="inputEmail">Email address</label>
                 <span name="emailspan"></span>
               </div>
 
               <div class="form-label-group my-4">
-                <input type="text" id="inputPhone" name="inputPhone" class="form-control" placeholder="Phone No" required>
+                <input type="text" id="inputPhone" name="inputPhone" value="<%=user.phone %>"  class="form-control" placeholder="Phone No" required>
                 <label for="inputPhone">Phone No</label>
                 <span name="phonespan"></span>
               </div>
 
               <div class="form-label-group my-4">
               	<div class="form-group">
-      			      <select class="form-control" id="inputGender" name="inputGender" required>
+      			      <select class="form-control" id="inputGender" name="inputGender" value="<%=user.gender %>" required>
       			      	<option>Select your Gender</option>
       			        <option value="male">Male</option>
       			        <option value="female">Female</option>
@@ -51,13 +51,13 @@
               </div>
 
               <div class="form-label-group my-4">
-                <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required>
+                <input type="password" id="inputPassword" name="inputPassword"  value="<%=user.password %>" class="form-control" placeholder="Password" required>
                 <label for="inputPassword">Password</label>
                 <span name="passwordspan"></span>
               </div>
               
               <div class="form-label-group my-4">
-                <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required>
+                <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" value="<%=user.conPassword %>"  class="form-control" placeholder="Password" required>
                 <label for="inputConfirmPassword">Confirm password</label>
                 <span name="confirmpasswordspan"></span>
               </div>
