--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -156,7 +156,7 @@
                             <div class="profile_img">	
                                 <span class="prfil-img"><img src="/abc/images/p1.png" alt=""> </span> 
                                 <div class="user-name">
-                                    <p>Malorum</p>
+                                    <p> <%=name %> </p>
                                     <span>Administrator</span>
                                 </div>
                                 <i class="fa fa-angle-down lnr"></i>
