--- a/assets/css/registration.css
+++ b/assets/css/registration.css
@@ -127,8 +127,6 @@
 
 .form-control{
   border-radius: 10rem;
-  
-
 }
 
 p{
@@ -148,6 +146,10 @@ a:hover{
 select{
   height: auto;
   border-radius: 2rem;
+}
+
+.row{
+  height: 100%;
 }
 
 .data1{
