--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -9,7 +9,11 @@
     
 <!--    header selected -->
      <% if (login=="true") { %>
-     <% include ../common/user_header.ejs %>
+            <% if(user_type=="Admin") {%>
+                <% include ../common/adminheader.ejs %>
+                <% } else { %>
+                    <% include ../common/user_header.ejs %>
+                <% } %>
      <% } else { %>
      <% include ../common/header.ejs %>
      <% } %>
