--- a/views/admin/addadmin.ejs
+++ b/views/admin/addadmin.ejs
@@ -58,8 +58,17 @@
                 <div class="form-label-group my-4">
                   <input type="password" id="inputConfirmPassword" name="inputConfirmPassword" class="form-control" placeholder="Password" required>
                   <label for="inputConfirmPassword">Confirm password</label>
+                  <span name="confirmpasswordspan"></span>
                 </div>
-
+                
+                <!-- <div class="text-center">
+                        <% if(typeof errors != "undefined"){ %>   
+                    <button type="button" class="error-button"><strong>
+                        <% errors.forEach(function(err){ %>
+                            <%= err.msg %><br>
+                        <% }); %>
+                    </strong></button><% } %> -->
+                    
                 <button class="btn btn-lg btn-block my-4" type="submit">Add</button>
               </form>
             </div>
